--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,40 +7,12 @@ on: [
 ]
 
 env:
-  # Important to pin the clang version, cause we also use it for linting
-  CLANG_VERSION: 17
-  CLANG_TIDY_JOBS: 4
-  # LLVM MinGW download
-  LLVM_MINGW_VERSION: llvm-mingw-20231128-msvcrt-ubuntu-20.04-x86_64
-  LLVM_MINGW_DOWNLOAD: https://github.com/mstorsjo/llvm-mingw/releases/download/20231128/llvm-mingw-20231128-msvcrt-ubuntu-20.04-x86_64.tar.xz
-  # xwin settings
-  XWIN_VERSION: xwin-0.5.0-x86_64-unknown-linux-musl
-  XWIN_DOWNLOAD: https://github.com/Jake-Shadle/xwin/releases/download/0.5.0/xwin-0.5.0-x86_64-unknown-linux-musl.tar.gz
+  LLVM_MINGW_VERSION: llvm-mingw-20240619-msvcrt-ubuntu-20.04-x86_64
+  LLVM_MINGW_DOWNLOAD: https://github.com/mstorsjo/llvm-mingw/releases/download/20240619/llvm-mingw-20240619-msvcrt-ubuntu-20.04-x86_64.tar.xz
 
 jobs:
-  cache-clang:
-    runs-on: windows-latest
-
-    steps:
-    - name: Cache Clang
-      uses: actions/cache@v3
-      id: cache-clang
-      with:
-        path: C:\Program Files\LLVM
-        key: ${{ runner.os }}-clang-${{ env.CLANG_VERSION }}
-        lookup-only: true
-
-    - name: Setup Clang
-      if: steps.cache-clang.outputs.cache-hit != 'true'
-      uses: egor-tensin/setup-clang@v1
-      with:
-        version: ${{ env.CLANG_VERSION }}
-
-# ==============================================================================
-
   build-windows:
     runs-on: windows-latest
-    needs: cache-clang
 
     strategy:
       fail-fast: false
@@ -53,17 +25,13 @@ jobs:
         ]
 
     steps:
-    - name: Restore Clang Cache
+    - name: Setup Clang
       if: startswith(matrix.preset, 'clang')
-      uses: actions/cache/restore@v3
-      with:
-        path: C:\Program Files\LLVM
-        key: ${{ runner.os }}-clang-${{ env.CLANG_VERSION }}
-        fail-on-cache-miss: true
+      uses: egor-tensin/setup-clang@v1
 
     - name: Add MSVC to PATH
       if: startswith(matrix.preset, 'msvc')
-      uses: TheMrMilchmann/setup-msvc-dev@v2
+      uses: TheMrMilchmann/setup-msvc-dev@v3
       with:
         arch: ${{ fromJSON('["x86", "x64"]')[contains(matrix.preset, 'x64')] }}
 
@@ -71,7 +39,7 @@ jobs:
       uses: lukka/get-cmake@latest
 
     - name: Checkout repository and submodules
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         submodules: recursive
 
@@ -84,7 +52,8 @@ jobs:
       run: cmake --build out/build/${{ matrix.preset }}
 
   build-ubuntu:
-    runs-on: ubuntu-latest
+    # Require at least 24 for the mingw build
+    runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
@@ -94,42 +63,13 @@ jobs:
           "clang-cross-ue4-x64-release",
           "llvm-mingw-ue3-x86-release",
           "llvm-mingw-ue4-x64-release",
-          # Currently, ubuntu-latest is 22.04, whose mingw version is too old, so disabling these
-          # builds for now
-          # Not sure of the exact threshold, 13.1.0 works
-          # "mingw-ue3-x86-release",
-          # "mingw-ue4-x64-release",
+          "mingw-ue3-x86-release",
+          "mingw-ue4-x64-release",
         ]
 
     steps:
     - name: Setup CMake and Ninja
       uses: lukka/get-cmake@latest
-
-    # Both Clang and MinGW install quick enough that it's not worth caching
-    # Caching would also lose the +x - so we'd have to tar before caching/untar after, making it
-    #  even slower
-    - name: Setup Clang
-      if: startswith(matrix.preset, 'clang')
-      run: |
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        sudo ./llvm.sh ${{ env.CLANG_VERSION }}
-
-        sudo update-alternatives --install              \
-          /usr/bin/clang                                \
-          clang                                         \
-          /usr/bin/clang-${{ env.CLANG_VERSION }}       \
-          200
-        sudo update-alternatives --install              \
-          /usr/bin/clang++                              \
-          clang++                                       \
-          /usr/bin/clang++-${{ env.CLANG_VERSION }}     \
-          200
-        sudo update-alternatives --install              \
-          /usr/bin/llvm-rc                              \
-          llvm-rc                                       \
-          /usr/bin/llvm-rc-${{ env.CLANG_VERSION }}     \
-          200
 
     - name: Setup LLVM MinGW
       if: startswith(matrix.preset, 'llvm-mingw')
@@ -138,46 +78,52 @@ jobs:
         tar -xf ${{ env.LLVM_MINGW_VERSION }}.tar.xz -C ~/
         echo $(readlink -f ~/${{ env.LLVM_MINGW_VERSION }}/bin) >> $GITHUB_PATH
 
-    - name: Set up MinGW
+    - name: Setup MinGW
       if: startswith(matrix.preset, 'mingw')
       uses: egor-tensin/setup-mingw@v2
       with:
         platform: ${{ fromJSON('["x86", "x64"]')[contains(matrix.preset, 'x64')] }}
 
-    # xwin does take long enough that caching's worth it
-    - name: Restore xwin cache
-      if: contains(matrix.preset, 'cross')
-      uses: actions/cache@v3
-      id: cache-xwin
-      with:
-        path: ~/xwin
-        key: ${{ runner.os }}-xwin
+    - name: Setup Clang
+      if: startswith(matrix.preset, 'clang-cross')
+      uses: egor-tensin/setup-clang@v1
 
-    - name: Setup xwin
-      if: contains(matrix.preset, 'cross') && steps.cache-xwin.outputs.cache-hit != 'true'
+    - name: Restore win sdk cache
+      if: startswith(matrix.preset, 'clang-cross')
+      uses: actions/cache@v4
+      id: cache-win-sdk
+      with:
+        path: ~/win-sdk
+        key: ${{ runner.os }}-win-sdk
+
+    - name: Setup msitools
+      if: startswith(matrix.preset, 'clang-cross') && steps.cache-win-sdk.outputs.cache-hit != 'true'
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: msitools
+        version: ${{ runner.os }}-msitools
+
+    - name: Setup win sdk
+      if: startswith(matrix.preset, 'clang-cross') && steps.cache-win-sdk.outputs.cache-hit != 'true'
       run: |
-        wget -nv ${{ env.XWIN_DOWNLOAD }}
-        tar -xf ${{ env.XWIN_VERSION }}.tar.gz
-        ${{ env.XWIN_VERSION }}/xwin    \
-          --accept-license              \
-          --arch x86,x86_64             \
-          splat                         \
-          --include-debug-libs          \
-          --output ~/xwin
+        git clone https://github.com/mstorsjo/msvc-wine.git
+        msvc-wine/vsdownload.py --accept-license --dest ~/win-sdk Microsoft.VisualStudio.Workload.VCTools
+        msvc-wine/install.sh ~/win-sdk
+        rm -r msvc-wine
 
     - name: Checkout repository and submodules
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         submodules: recursive
 
     - name: Configure CMake
       working-directory: ${{ env.GITHUB_WORKSPACE }}
-      # The extra xwin dir arg won't do anything if we're not cross compiling
+      # The extra msvc wine arg won't do anything if we're not cross compiling
       run: >
         cmake .
         --preset ${{ matrix.preset }}
         -G Ninja
-        -DXWIN_DIR=$(readlink -f ~)/xwin
+        -DMSVC_WINE_ENV_SCRIPT=$(readlink -f ~)/win-sdk/bin/${{ fromJSON('["x86", "x64"]')[contains(matrix.preset, 'x64')] }}/msvcenv.sh
 
     - name: Build
       working-directory: ${{ env.GITHUB_WORKSPACE }}
@@ -187,7 +133,6 @@ jobs:
 
   clang-tidy:
     runs-on: windows-latest
-    needs: cache-clang
 
     strategy:
       fail-fast: false
@@ -198,12 +143,9 @@ jobs:
         ]
 
     steps:
-    - name: Restore Clang Cache
-      uses: actions/cache/restore@v3
-      with:
-        path: C:\Program Files\LLVM
-        key: ${{ runner.os }}-clang-${{ env.CLANG_VERSION }}
-        fail-on-cache-miss: true
+    - name: Setup Clang
+      if: startswith(matrix.preset, 'clang')
+      uses: egor-tensin/setup-clang@v1
 
     - name: Setup CMake and Ninja
       uses: lukka/get-cmake@latest
@@ -213,7 +155,7 @@ jobs:
       run: pip install pyyaml
 
     - name: Checkout repository and submodules
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         submodules: recursive
 
@@ -232,7 +174,6 @@ jobs:
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: |
         python (Get-Command run-clang-tidy).Source                              `
-          -j ${{ env.CLANG_TIDY_JOBS }}                                         `
           -p "out\build\${{ matrix.preset }}"                                   `
           -export-fixes clang-tidy-fixes.yml                                    `
           $([Regex]::Escape("$pwd\src") + ".+\.(c|cpp|h|hpp)$")
@@ -244,18 +185,14 @@ jobs:
 
   clang-format:
     runs-on: windows-latest
-    needs: cache-clang
 
     steps:
-    - name: Restore Clang Cache
-      uses: actions/cache/restore@v3
-      with:
-        path: C:\Program Files\LLVM
-        key: ${{ runner.os }}-clang-${{ env.CLANG_VERSION }}
-        fail-on-cache-miss: true
+    - name: Setup Clang
+      if: startswith(matrix.preset, 'clang')
+      uses: egor-tensin/setup-clang@v1
 
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Run clang-format
       run: |
@@ -273,7 +210,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Check spelling
       uses: crate-ci/typos@master
