Revert "fix .gitmodules common_cmake url."
This reverts commit b91b43d26a12f9eb9c35479106d41f5b3b8c248d.

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/fmtlib/fmt.git
 [submodule "common_cmake"]
 	path = common_cmake
-	url = https://github.com/bl-sdk/common_cmake
+	url = git@github.com:bl-sdk/common_cmake.git
