--- a/unrealsdk.toml.example
+++ b/unrealsdk.toml.example
@@ -1,5 +1,4 @@
-# This file shows all settings which the sdk uses. All values are set to their defaults
-
+# This file shows all settings which the sdk uses.
 # Note that not all settings are used under all build configurations - for example UE3 doesn't
 # support FText, so `ftext_get_display_string_vf_index` is of course unused.
 
@@ -10,31 +9,31 @@ external_console = false
 
 # The file to write log messages to, relative to the dll.
 log_file = "unrealsdk.log"
-# The default logging level used in the unreal console.
+# Changes the default logging level used in the unreal console.
 console_log_level = "INFO"
 
 # If set, overrides the executable name used for game detection in the shared module.
 exe_override = ""
 
-# If not 0, changes the size the `UProperty` class is assumed to have.
-uproperty_size = 0
-# If not 0, changes the alignment used when calling the unreal memory allocation functions.
-alloc_alignment = 0;
+# Changes the size the `UProperty` class is assumed to have.
+uproperty_size = -1
+# Changes the alignment used when calling the unreal memory allocation functions.
+alloc_alignment = -1
 
 # The default console key set when one is not already bound. If a key is already bound via standard
 # unreal facilities, this is ignored.
 console_key = "Tilde"
-# If positive, overrides the virtual function index used when hooking `UConsole::ConsoleCommand`.
+# Overrides the virtual function index used when hooking `UConsole::ConsoleCommand`.
 uconsole_console_command_vf_index = -1
-# If positive, overrides the virtual function index used when calling `UConsole::OutputText`.
+# Overrides the virtual function index used when calling `UConsole::OutputText`.
 uconsole_output_text_vf_index = -1
 
-# If positive, overrides the virtual function index used when calling `TReferenceController::DestroyObject`.
+# Overrides the virtual function index used when calling `TReferenceController::DestroyObject`.
 treference_controller_destroy_obj_vf_index = -1
-# If positive, overrides the virtual function index used when calling `TReferenceController::~TReferenceController`.
+# Overrides the virtual function index used when calling `TReferenceController::~TReferenceController`.
 treference_controller_destructor_vf_index = -1
 
-# If positive, overrides the virtual function index used when calling `FText::GetDisplayString`.
+# Overrides the virtual function index used when calling `FText::GetDisplayString`.
 ftext_get_display_string_vf_index = -1
 
 # If true, locks simultaneous ProcessEvent calls from different threads. This is used both for hooks
