expand scope of locking function calls
this is motivated by a lockup caused in bl2 calling `PC.ConsoleCommand("x")`
in trying to print the `>>> x <<<` line, we woke the logger thread
it then changed the function flags on `Engine.Console:OutputTextLine`, before getting stuck on waiting for the lock inside `process_event`
at the same time, the main thread tried to print `Command not recognized: x`, also calling `OutputTextLine`
something about the flags having been changed while calling it caused a lockup

fix is to expand the scope of the lock, and only change the function flags while we hold it

incidentally the native call to `OutputTextLine` went through `CallFunction`, figure it's a good idea to lock during it too

--- a/supported_settings.toml
+++ b/supported_settings.toml
@@ -45,11 +45,12 @@ treference_controller_destructor_vf_index = -1
 # Overrides the virtual function index used when calling `FText::GetDisplayString`.
 ftext_get_display_string_vf_index = -1
 
-# If true, locks simultaneous ProcessEvent calls from different threads. This is used both for hooks
-# and for calling unreal functions.
+# If true, locks simultaneous unreal function calls from different threads. This lock is held both
+# during hooks and when you manually call unreal functions.
 # When true, if external code must take care with it's own locks. If external code attempts to
 # acquire a lock inside a hook, while at the same time trying to call an unreal function on the
 # thread which holds that lock, the system will deadlock.
+locking_function_calls = false
 locking_process_event = false
 
 # After enabling `unrealsdk::hook_manager::log_all_calls`, the file to calls are logged to.
