--- a/supported_settings.toml
+++ b/supported_settings.toml
@@ -60,4 +60,4 @@ log_all_calls_file = "unrealsdk.calls.tsv"
 # Overrides the virtual function index used when calling `UObject::PostEditChangeProperty`.
 uobject_post_edit_change_property_vf_index = -1
 # Overrides the virtual function index used when calling `UObject::PostEditChangeChainProperty`.
-uobject_post_edit_change_chain property_vf_index = -1
+uobject_post_edit_change_chain_property_vf_index = -1
